welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: too many arguments for method estSurMessage: ()Boolean
if(estSurMessage(A)){
                ^